# algnum

./: CMakeLists.txt
src/: algebraic_number.h
test/: algnum_tests.cpp
